--- a/style.css
+++ b/style.css
@@ -227,7 +227,7 @@ footer .social-media a {
 #scrollToTop {
     display: none;
     position: fixed;
-    bottom: 20px;
+    bottom: 95px;
     right: 20px;
     z-index: 1000;
     background-color: #04606d;
@@ -237,8 +237,10 @@ footer .social-media a {
     width: 40px;
     height: 40px;
     cursor: pointer;
+    transition:  0.5s ; 
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    opacity: 90%;
 }
 #scrollToTop:hover{
     background-color: #c7b299;
-    transition:  0.5s ease; 
 }
