--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@ body {
     color: #333;
     text-align: right;
     display: block;
-    
 }
 
 .popup {
@@ -213,6 +212,8 @@ footer .social-media a {
 
 .container p{
     text-align: center;
+    font-size: xx-large;
+    text-shadow: 5px 1px 9px rgba(0, 0, 0, 0.7);
 }
 
 @keyframes fadeIn {
@@ -239,7 +240,7 @@ footer .social-media a {
     height: 40px;
     cursor: pointer;
     transition:  0.5s ; 
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.3);
     opacity: 90%;
 }
 #scrollToTop:hover{
